git ignore was added

--- a/TJournal.ipynb
+++ b/TJournal.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -728,7 +728,19 @@
       "https://tjournal.ru/p/vladimir-drinkman 2015-09-18\n",
       "https://tjournal.ru/p/jony-jive 2015-09-17\n",
       "https://tjournal.ru/p/google-research-balloon-crash 2015-09-17\n",
-      "https://tjournal.ru/p/scissors-robot"
+      "https://tjournal.ru/p/scissors-robot 2015-09-16\n",
+      "https://tjournal.ru/p/ashley-madison-passwords 2015-09-16\n",
+      "https://tjournal.ru/p/bono-concerts 2015-09-16\n",
+      "https://tjournal.ru/p/google-driverless-hyundai-us-ceo 2015-09-16\n",
+      "https://tjournal.ru/p/hardcore-trailer 2015-09-14\n",
+      "https://tjournal.ru/p/trevor-paglen-underwater-cables-nsa 2015-09-13\n",
+      "https://tjournal.ru/p/therunet-suicide-rkn 2015-09-13\n",
+      "https://tjournal.ru/p/north-carolina-copening-denson-sexting 2015-09-13\n",
+      "https://tjournal.ru/p/message-for-aliens 2015-09-13\n",
+      "https://tjournal.ru/p/uber-late-show-colber 2015-09-13\n",
+      "https://tjournal.ru/p/spacex-crew-dragon-interior 2015-09-13\n",
+      "https://tjournal.ru/p/maste-key-leaked 2015-09-13\n",
+      "https://tjournal.ru/p/pskov-instagram-getty 2015-09-12\n"
      ]
     }
    ],
