--- a/TJournal.ipynb
+++ b/TJournal.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -786,7 +786,7 @@
        "9                https://tjournal.ru/p/stupid-quotes  27746  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -808,7 +808,7 @@
        "721"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -916,7 +916,7 @@
        "0                 23                75097  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -1037,7 +1037,7 @@
        "691"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -1070,11 +1070,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 116,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>comments</th>\n",
+       "      <th>date</th>\n",
+       "      <th>source</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>title</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "      <th>views</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>favorite_count</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tw_id</th>\n",
+       "      <th>user_favourites_count</th>\n",
+       "      <th>user_followers_count</th>\n",
+       "      <th>user_friends_count</th>\n",
+       "      <th>user_listed_count</th>\n",
+       "      <th>user_statuses_count</th>\n",
+       "      <th>time_since_news</th>\n",
+       "      <th>week_day_news</th>\n",
+       "      <th>minutes_since_midnight</th>\n",
+       "      <th>first_time_tweet</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>51</td>\n",
+       "      <td>2015-12-05 18:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[подписка, мобильные приложения, урбанизация, ...</td>\n",
+       "      <td>Мнение: Приложения и интернет-сервисы убивают ...</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>https://vc.ru/p/app-around-corner</td>\n",
+       "      <td>6412</td>\n",
+       "      <td>2015-12-06 12:01:57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>673427142642921472</td>\n",
+       "      <td>8450</td>\n",
+       "      <td>469</td>\n",
+       "      <td>153</td>\n",
+       "      <td>23</td>\n",
+       "      <td>75097</td>\n",
+       "      <td>1036</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>51</td>\n",
+       "      <td>2015-12-05 18:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[подписка, мобильные приложения, урбанизация, ...</td>\n",
+       "      <td>Мнение: Приложения и интернет-сервисы убивают ...</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>https://vc.ru/p/app-around-corner</td>\n",
+       "      <td>6412</td>\n",
+       "      <td>2015-12-06 00:03:41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>673246386809384960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1407</td>\n",
+       "      <td>37</td>\n",
+       "      <td>2703</td>\n",
+       "      <td>207559</td>\n",
+       "      <td>318</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>51</td>\n",
+       "      <td>2015-12-05 18:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[подписка, мобильные приложения, урбанизация, ...</td>\n",
+       "      <td>Мнение: Приложения и интернет-сервисы убивают ...</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>https://vc.ru/p/app-around-corner</td>\n",
+       "      <td>6412</td>\n",
+       "      <td>2015-12-06 00:03:24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>673246313157382144</td>\n",
+       "      <td>915</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>579</td>\n",
+       "      <td>26</td>\n",
+       "      <td>103048</td>\n",
+       "      <td>318</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>51</td>\n",
+       "      <td>2015-12-05 18:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[подписка, мобильные приложения, урбанизация, ...</td>\n",
+       "      <td>Мнение: Приложения и интернет-сервисы убивают ...</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>https://vc.ru/p/app-around-corner</td>\n",
+       "      <td>6412</td>\n",
+       "      <td>2015-12-06 00:00:29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>673245580907454467</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>315</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>578</th>\n",
+       "      <td>51</td>\n",
+       "      <td>2015-12-05 18:45</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[подписка, мобильные приложения, урбанизация, ...</td>\n",
+       "      <td>Мнение: Приложения и интернет-сервисы убивают ...</td>\n",
+       "      <td>VC</td>\n",
+       "      <td>https://vc.ru/p/app-around-corner</td>\n",
+       "      <td>6412</td>\n",
+       "      <td>2015-12-05 23:49:52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>673242907776712704</td>\n",
+       "      <td>754</td>\n",
+       "      <td>115</td>\n",
+       "      <td>63</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16043</td>\n",
+       "      <td>304</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1125</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     comments              date source  \\\n",
+       "578        51  2015-12-05 18:45    NaN   \n",
+       "578        51  2015-12-05 18:45    NaN   \n",
+       "578        51  2015-12-05 18:45    NaN   \n",
+       "578        51  2015-12-05 18:45    NaN   \n",
+       "578        51  2015-12-05 18:45    NaN   \n",
+       "\n",
+       "                                                  tags  \\\n",
+       "578  [подписка, мобильные приложения, урбанизация, ...   \n",
+       "578  [подписка, мобильные приложения, урбанизация, ...   \n",
+       "578  [подписка, мобильные приложения, урбанизация, ...   \n",
+       "578  [подписка, мобильные приложения, урбанизация, ...   \n",
+       "578  [подписка, мобильные приложения, урбанизация, ...   \n",
+       "\n",
+       "                                                 title type  \\\n",
+       "578  Мнение: Приложения и интернет-сервисы убивают ...   VC   \n",
+       "578  Мнение: Приложения и интернет-сервисы убивают ...   VC   \n",
+       "578  Мнение: Приложения и интернет-сервисы убивают ...   VC   \n",
+       "578  Мнение: Приложения и интернет-сервисы убивают ...   VC   \n",
+       "578  Мнение: Приложения и интернет-сервисы убивают ...   VC   \n",
+       "\n",
+       "                                   url  views           created_at  \\\n",
+       "578  https://vc.ru/p/app-around-corner   6412  2015-12-06 12:01:57   \n",
+       "578  https://vc.ru/p/app-around-corner   6412  2015-12-06 00:03:41   \n",
+       "578  https://vc.ru/p/app-around-corner   6412  2015-12-06 00:03:24   \n",
+       "578  https://vc.ru/p/app-around-corner   6412  2015-12-06 00:00:29   \n",
+       "578  https://vc.ru/p/app-around-corner   6412  2015-12-05 23:49:52   \n",
+       "\n",
+       "     favorite_count        ...                      tw_id  \\\n",
+       "578               0        ...         673427142642921472   \n",
+       "578               0        ...         673246386809384960   \n",
+       "578               0        ...         673246313157382144   \n",
+       "578               0        ...         673245580907454467   \n",
+       "578               0        ...         673242907776712704   \n",
+       "\n",
+       "     user_favourites_count  user_followers_count  user_friends_count  \\\n",
+       "578                   8450                   469                 153   \n",
+       "578                      0                  1407                  37   \n",
+       "578                    915                  1060                 579   \n",
+       "578                      0                     0                  37   \n",
+       "578                    754                   115                  63   \n",
+       "\n",
+       "     user_listed_count  user_statuses_count  time_since_news  week_day_news  \\\n",
+       "578                 23                75097             1036              5   \n",
+       "578               2703               207559              318              5   \n",
+       "578                 26               103048              318              5   \n",
+       "578                  0                    2              315              5   \n",
+       "578                  3                16043              304              5   \n",
+       "\n",
+       "     minutes_since_midnight  first_time_tweet  \n",
+       "578                    1125                12  \n",
+       "578                    1125                12  \n",
+       "578                    1125                12  \n",
+       "578                    1125                12  \n",
+       "578                    1125                12  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Считаем общее количество твиттов\n",
     "count_of_tweets = pd.DataFrame(grouped[\"url\"].count())\n",
