--- a/Comments and Views.ipynb
+++ b/Comments and Views.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
     "            \"title\": title, \n",
     "            \"views\": view, \n",
     "            \"comments\": comment, \n",
-    "            \"created_date\": date, \n",
+    "            \"news_created_date\": date, \n",
     "            \"collect_date\": datetime.today().strftime(\"%Y-%m-%d %H:%M\"),\n",
     "            \"type\": news_type\n",
     "        }\n",
@@ -132,7 +132,7 @@
     "        for link in links:\n",
     "            link_info = self.get_link_info(link)\n",
     "            # Если заданное время не подходит\n",
-    "            if link_info[\"created_date\"] > first_date or link_info[\"created_date\"] < last_date:\n",
+    "            if link_info[\"news_created_date\"] > first_date or link_info[\"news_created_date\"] < last_date:\n",
     "                continue\n",
     "    \n",
     "            link_info_list.append(link_info)\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
     "                \"title\": title, \n",
     "                \"views\": view, \n",
     "                \"comments\": comment, \n",
-    "                \"created_date\": date, \n",
+    "                \"news_created_date\": date, \n",
     "                \"collect_date\": datetime.today().strftime(\"%Y-%m-%d %H:%M\"),\n",
     "                \"type\": \"VC\"\n",
     "               }\n",
@@ -249,7 +249,7 @@
     "            \n",
     "            link_info = self.get_link_info(link)\n",
     "            # Если заданное время не подходит\n",
-    "            if link_info[\"created_date\"] < first_date or link_info[\"created_date\"] > last_date:\n",
+    "            if link_info[\"news_created_date\"] < first_date or link_info[\"news_created_date\"] > last_date:\n",
     "                print \"continue\"\n",
     "                continue\n",
     "            \n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -314,16 +314,15 @@
     "\n",
     "\n",
     "\n",
-    "    def loadTweetWithLink(self, link, date):\n",
+    "    def loadTweetWithLink(self, link):\n",
     "        \"\"\"\n",
     "\n",
     "        :param link: str, ключевое слово для поиска, вданном случае - ссылка на письмо\n",
-    "        :param date: str, дата, до которой искать твиты\n",
     "        :return: список словариков с информацией о УНИКАЛЬНЫХ твитах по запросу link\n",
     "        \"\"\"\n",
     "        set_id = set()\n",
     "        tweet_list = []\n",
-    "        result = self.api.GetSearch(term=link, until=date, count=100000)\n",
+    "        result = self.api.GetSearch(term=link, count=100000)\n",
     "\n",
     "        for res in result:\n",
     "\n",
@@ -373,20 +372,9 @@
     "            tweet_list.append(tw_dict)\n",
     "\n",
     "        return tweet_list\n",
+    "    \n",
     "\n",
-    "    def _get_next_date(self, date, days):\n",
-    "        \"\"\"\n",
-    "\n",
-    "        :param date: str, дата\n",
-    "        :param days: int, количество дней\n",
-    "        :return: возвращает дату через days-дней после date\n",
-    "        \"\"\"\n",
-    "        date = datetime.strptime(date, '%Y-%m-%d %H:%M')\n",
-    "        date += timedelta(days=days)\n",
-    "        return str(date).split(' ')[0]\n",
-    "\n",
-    "\n",
-    "    def load_tweets_by_term(self, news_list, days_after_news=2):\n",
+    "    def load_tweets_by_term(self, news_list, days_after_news=3):\n",
     "        \"\"\"\n",
     "\n",
     "        :param news_list: list(str), список словариков с информацией о новости\n",
@@ -397,8 +385,9 @@
     "        for news in news_list:\n",
     "            tweets = []\n",
     "            try:\n",
-    "                until_date = self._get_next_date(news[\"date\"], days_after_news)\n",
-    "                tweets = self.loadTweetWithLink(news[\"url\"], until_date)\n",
+    "                #print news\n",
+    "                #until_date = self._get_next_date(news[\"created_date\"], days_after_news)\n",
+    "                tweets = self.loadTweetWithLink(news)\n",
     "            except twitter.error.TwitterError as ex:\n",
     "                print str(ex)\n",
     "                if str(ex) == self._RATE_LIMIT:\n",
@@ -418,77 +407,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "SLEEP_TIME = 60*60\n",
-    "COMMENTS_COUNT_FILE = \"comments.csv\""
+    "COMMENTS_COUNT_FILE = \"Comments/comments.csv\"\n",
+    "COMMENTS_TWITTER_FILE = \"Comments/twitter_comments.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2015-12-06 14:14'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Скачали  10  страниц\n",
+      "Скачали  20  страниц\n",
+      "Скачали  30  страниц\n",
+      "Скачали  10  страниц\n",
+      "Скачали  20  страниц\n",
+      "Скачали  30  страниц\n",
+      "Скачали  40  страниц\n",
+      "Скачали  50  страниц\n",
+      "Сейчас скачано 160 записей. Номер итерации 1\n"
+     ]
     }
    ],
    "source": [
-    "\n",
     "i=0\n",
-    "while (i<24):\n",
+    "while (i<1):\n",
     "    i+=1\n",
     "    tj_pages = TJLoader().get_tj_news_info()\n",
     "    vc_pages = VCLoader().get_tj_news_info()\n",
     "    new_df = pd.DataFrame(tj_pages+vc_pages)\n",
     "    \n",
-    "    prev_df = pd.read_csv(OUT_NEWS_FILE, sep=\",\")\n",
+    "    prev_df = pd.read_csv(COMMENTS_COUNT_FILE, sep=\",\")\n",
     "    df = (prev_df.append(new_df)).reset_index(drop=True)\n",
     "    \n",
     "    print \"Сейчас скачано {} записей. Номер итерации {}\".format(len(df), i)\n",
     "    \n",
     "    df.to_csv(COMMENTS_COUNT_FILE, sep=\",\", index=False, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)    \n",
-    "    time.sleep(SLEEP_TIME)"
+    "    #time.sleep(SLEEP_TIME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собрано информация о 10  новостях\n",
+      "Собрано информация о 20  новостях\n",
+      "Собрано информация о 30  новостях\n",
+      "Собрано информация о 40  новостях\n",
+      "Собрано информация о 50  новостях\n",
+      "Собрано информация о 60  новостях\n",
+      "Собрано информация о 70  новостях\n",
+      "Собрано информация о 80  новостях\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(COMMENTS_COUNT_FILE, sep=\",\")\n",
+    "pages = df[\"url\"].unique()\n",
+    "tw = TwitterLoader()\n",
+    "tw_df = tw.load_tweets_by_term(pages)\n",
+    "tw_df = pd.DataFrame(tw_df)\n",
+    "tw_df.to_csv(COMMENTS_TWITTER_FILE, sep=\",\", index=False, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Удаляет повторяющиеся записи\n",
+    "def drop_duplucates(df, field):\n",
+    "    # Сначала для твиттера\n",
+    "    last_size = len(df)\n",
+    "    dupl = df[field].duplicated()\n",
+    "    dupl = np.invert((dupl.as_matrix()))\n",
+    "    df = df[dupl]\n",
+    "    print \"Удалено \", last_size-len(df)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def diff_date_minutes(early_date, later_date, format=1):\n",
+    "    early_date = datetime.strptime(early_date, '%Y-%m-%d %H:%M')\n",
+    "    if format == 1:\n",
+    "        later_date = datetime.strptime(later_date, '%Y-%m-%d %H:%M:%S')\n",
+    "    else:\n",
+    "        later_date = datetime.strptime(later_date, '%Y-%m-%d %H:%M')\n",
+    "        \n",
+    "    return int((later_date-early_date).total_seconds()/60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_news_between_collect_and_create(news_df, minutes, delta):    \n",
+    "    \n",
+    "    news_df[\"between_collect_and_create\"] = news_df.apply(lambda s: diff_date_minutes(s[\"news_created_date\"], s[\"collect_date\"], 2), axis=1)\n",
+    "    news_df = news_df[news_df[\"between_collect_and_create\"] < minutes+delta ]\n",
+    "    \n",
+    "    news_df[\"is_fitted\"] = news_df.groupby('url')['between_collect_and_create'].transform(max) == news_df['between_collect_and_create']\n",
+    "    \n",
+    "    news_df = news_df[news_df[\"is_fitted\"]==True]\n",
+    "    news_df = news_df[news_df[\"between_collect_and_create\"] > minutes-delta ]\n",
+    "    \n",
+    "    return news_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_needed_tweets(tw_df, minutes):\n",
+    "    #tw_df = tw_df[tw_df[\"url\"].isin(urls)]\n",
+    "    tw_df[\"between_tweet_and_create\"] = tw_df.apply(lambda s: diff_date_minutes(s[\"news_created_date\"], s[\"created_at\"]), axis=1)\n",
+    "    \n",
+    "    tw_df = tw_df[tw_df[\"between_tweet_and_create\"] < minutes]\n",
+    "    \n",
+    "    grouped = tw_df.groupby(\"url\")\n",
+    "    count_of_tweets = pd.DataFrame(grouped[\"url\"].count())\n",
+    "    count_of_tweets.columns = [\"tweet_count\"]\n",
+    "    count_of_tweets.reset_index(inplace=True)  \n",
+    "    \n",
+    "    tw_df = pd.merge(count_of_tweets, tw_df, on='url', left_index=True, right_index=False, how=\"outer\")\n",
+    "    tw_df = tw_df[[\"url\", \"comments\", \"tweet_count\", \"views\"]]\n",
+    "    tw_df = tw_df.drop_duplicates()\n",
+    "    return tw_df\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def prepare_data(minutes, delta):\n",
+    "    \n",
+    "    news_df = pd.read_csv(COMMENTS_COUNT_FILE, sep=\",\")\n",
+    "    tw_df = pd.read_csv(COMMENTS_TWITTER_FILE, sep=\",\")\n",
+    "    \n",
+    "    tw_df = drop_duplucates(tw_df, \"tw_id\")\n",
+    "    \n",
+    "    \n",
+    "    # Имеет смысл предваритально отфильтровать news по времени, которое ищем!\n",
+    "    news_df = get_news_between_collect_and_create(news_df, minutes, delta)\n",
+    "\n",
+    "    df = news_df.merge(tw_df, on='url', left_index=True, right_index=False)\n",
+    "    \n",
+    "    df = get_needed_tweets(df, minutes)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'OUT_NEWS_FILE' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-33-0d8b8e06c6f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOUT_NEWS_FILE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\",\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"url\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'OUT_NEWS_FILE' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Удалено  0\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/popka/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>tweet_count</th>\n",
+       "      <th>views</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://tjournal.ru/p/rus-devices</td>\n",
+       "      <td>32</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1059</th>\n",
+       "      <td>https://vc.ru/n/match-pass</td>\n",
+       "      <td>23</td>\n",
+       "      <td>52</td>\n",
+       "      <td>19045</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    url  comments  tweet_count  views\n",
+       "0     https://tjournal.ru/p/rus-devices        32            4   3211\n",
+       "1059         https://vc.ru/n/match-pass        23           52  19045"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(OUT_NEWS_FILE, sep=\",\")\n",
-    "pages = df[\"url\"].unique()\n",
-    "tw = TwitterLoader()\n",
-    "tw.load_tweets_by_term(pages)\n"
+    "prepare_data(300, 200)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Чистка COMMENT_FILE\n",
+    "df = pd.read_csv(COMMENTS_COUNT_FILE, sep=\",\")\n",
+    "df = df[df[\"url\"] == \"\"]\n",
+    "df.to_csv(COMMENTS_COUNT_FILE, sep=\",\", index=False, encoding=\"utf-8\", quoting=csv.QUOTE_NONNUMERIC)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
