--- a/TJournal.ipynb
+++ b/TJournal.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -291,9 +291,8 @@
     "    \n",
     "    def __init__(self):\n",
     "        #self._pages = [\"https://roem.ru/rss/roem-all-news.xml\", \"http://lifenews.ru/xml/feed.xml\", \"http://www.forbes.ru/newrss.xml\", \"http://rg.ru/xml/index.xml\", \"http://www.vesti.ru/vesti.rss\", \"http://lenta.ru/rss\", \"http://ria.ru/export/rss2/index.xml\"]\n",
-    "        self._pages = [\"https://roem.ru/rss/roem-all-news.xml\", \"http://lifenews.ru/xml/feed.xml\", \"http://www.forbes.ru/newrss.xml\", \"http://www.vesti.ru/vesti.rss\", \"http://lenta.ru/rss\", \"http://ria.ru/export/rss2/index.xml\"]\n",
+    "        self._pages = [\"https://roem.ru/rss/roem-all-news.xml\", \"http://lifenews.ru/xml/feed.xml\", \"http://www.forbes.ru/newrss.xml\", \"http://www.vesti.ru/vesti.rss\", \"http://lenta.ru/rss\", \"http://ria.ru/export/rss2/index.xml\", \"https://navalny.com/blog/post.rss\", \"https://slon.ru/export/all.xml\", \"https://meduza.io/rss/all\", \"http://www.vedomosti.ru/rss/news\"]\n",
     "        self._month_dict = {\"Jan\":\"1\", \"Feb\":\"2\", \"Mar\":\"3\", \"Apr\":\"4\", \"May\":\"5\", \"Jun\":\"6\", \"Jul\":\"7\", \"Aug\":\"8\", \"Sep\":\"9\", \"Oct\":\"10\", \"Nov\":\"11\", \"Dec\":\"12\"}\n",
-    "        \n",
     "        \n",
     "        self._UTC_TIME_ZONE = tz.gettz('Europe/London')\n",
     "        self._MOSCOW_TIME_ZONE = tz.gettz('Europe/Moscow')\n",
@@ -333,10 +332,25 @@
     "    \n",
     "    \n",
     "    def _get_type(self, url):\n",
-    "        url = url.replace(\"www\", \"\")\n",
+    "        url = url.replace(\"www.\", \"\")\n",
     "        url = url.split(\"://\")[1]\n",
     "        url = url.split(\"/\")[0]\n",
     "        return url\n",
+    "    \n",
+    "    def _handle_data(self, url, link, title, date):\n",
+    "        \n",
+    "        # Убрать лишние пробелы\n",
+    "        title = re.sub(' +',' ', title)\n",
+    "        \n",
+    "        if url==\"https://slon.ru/export/all.xml\":\n",
+    "            link = link.split(\"?\")[0]\n",
+    "            title = title.replace(\"\\n\", \"\")\n",
+    "            \n",
+    "        # Приведение даты к общему формату и временной зоне\n",
+    "        date = self._parse_date(date)\n",
+    "        \n",
+    "        return link, title, date\n",
+    "        \n",
     "        \n",
     "    \n",
     "    def _get_hours_until_now(self, date):\n",
@@ -344,7 +358,7 @@
     "        now = datetime.today()\n",
     "        return float((now-news_date).total_seconds()/3600)\n",
     "        \n",
-    "    def get_news_array(self, hour=8):\n",
+    "    def get_news_array(self, hour=5):\n",
     "        \"\"\"\n",
     "        hour: int, время последней новости\n",
     "        \"\"\"\n",
@@ -356,11 +370,12 @@
     "            tree = ET.ElementTree(file=urlopen(url))\n",
     "            root = tree.getroot()\n",
     "            for i in root.iter('item'):\n",
+    "\n",
     "                link = i.find('link').text\n",
     "                title = i.find('title').text\n",
-    "                date_ = i.find('pubDate').text\n",
-    "                date = self._parse_date(date_)\n",
+    "                date = i.find('pubDate').text\n",
     "                \n",
+    "                link, title, date = self._handle_data(url, link, title, date)\n",
     "                news_info =  {\n",
     "                    \"title\": title,\n",
     "                    \"date\": date, \n",
@@ -378,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -586,11 +601,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-05d88c1569cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnews_info\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOUT_NEWS_FILE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\",\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtweeter_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mOUT_TWITTER_FILE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\",\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "news_info = pd.read_csv(OUT_NEWS_FILE, sep=\",\")\n",
     "tweeter_data = pd.read_csv(OUT_TWITTER_FILE, sep=\",\")"
@@ -598,197 +625,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>comments</th>\n",
-       "      <th>date</th>\n",
-       "      <th>source</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>title</th>\n",
-       "      <th>type</th>\n",
-       "      <th>url</th>\n",
-       "      <th>views</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>51</td>\n",
-       "      <td>2015-12-05 18:45</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[подписка, мобильные приложения, урбанизация, ...</td>\n",
-       "      <td>Мнение: Приложения и интернет-сервисы убивают ...</td>\n",
-       "      <td>VC</td>\n",
-       "      <td>https://vc.ru/p/app-around-corner</td>\n",
-       "      <td>6412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2015-12-05 16:10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[bluetooth, iBeacon, bluetooth-маяки]</td>\n",
-       "      <td>iBeacon-маяки для бизнеса: кейсы от EasyJet, B...</td>\n",
-       "      <td>VC</td>\n",
-       "      <td>https://vc.ru/p/ibeacon-marketing</td>\n",
-       "      <td>1644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>26</td>\n",
-       "      <td>2015-12-05 14:17</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[Россия, стартапы, китай, рейтинг, индия, мала...</td>\n",
-       "      <td>Россия, Польша, Тунис и другие — топ-10 стран ...</td>\n",
-       "      <td>VC</td>\n",
-       "      <td>https://vc.ru/p/best-cities-for-startups</td>\n",
-       "      <td>3950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2015-12-05 13:07</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[Игры, книги, безбумажная библиотека, nintendo...</td>\n",
-       "      <td>«Консольные войны»: Sega против Nintendo</td>\n",
-       "      <td>VC</td>\n",
-       "      <td>https://vc.ru/p/sega-nintendo</td>\n",
-       "      <td>1817</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2015-12-04 21:23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[uber]</td>\n",
-       "      <td>Украинское министерство инфраструктуры анонсир...</td>\n",
-       "      <td>VC</td>\n",
-       "      <td>https://vc.ru/n/uber-ukraine</td>\n",
-       "      <td>3367</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>7</td>\n",
-       "      <td>2015-12-06 00:21</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[Breaking Mad, депутаты, драматичные новости]</td>\n",
-       "      <td>Драматичные новости недели от Breaking Mad: шт...</td>\n",
-       "      <td>TJ_P</td>\n",
-       "      <td>https://tjournal.ru/p/breaking-mad-cientotres</td>\n",
-       "      <td>2233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>21</td>\n",
-       "      <td>2015-12-05 19:05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[музыка, безопасность, Википедия, знаменитости]</td>\n",
-       "      <td>Австралиец попал за кулисы к любимой группе, и...</td>\n",
-       "      <td>TJ_P</td>\n",
-       "      <td>https://tjournal.ru/p/peking-duk-fan</td>\n",
-       "      <td>17766</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>23</td>\n",
-       "      <td>2015-12-05 14:01</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[фото, Instagram, Новый год, Рождество]</td>\n",
-       "      <td>Праздник к нам приходит: ёлки в разных странах...</td>\n",
-       "      <td>TJ_P</td>\n",
-       "      <td>https://tjournal.ru/p/christmas-trees-around-t...</td>\n",
-       "      <td>5326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>88</td>\n",
-       "      <td>2015-12-05 12:40</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[СМИ, журналистика, медиа, Алексей Венедиктов,...</td>\n",
-       "      <td>Леся Рябцева объявила об уходе с «Эха Москвы» ...</td>\n",
-       "      <td>TJ_P</td>\n",
-       "      <td>https://tjournal.ru/p/lesya-echo-off</td>\n",
-       "      <td>45124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>169</td>\n",
-       "      <td>2015-12-04 22:20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[научные исследования, британские учёные, глуп...</td>\n",
-       "      <td>Глупость любителей «глубокомысленных» цитат по...</td>\n",
-       "      <td>TJ_P</td>\n",
-       "      <td>https://tjournal.ru/p/stupid-quotes</td>\n",
-       "      <td>27746</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   comments              date source  \\\n",
-       "0        51  2015-12-05 18:45    NaN   \n",
-       "1         3  2015-12-05 16:10    NaN   \n",
-       "2        26  2015-12-05 14:17    NaN   \n",
-       "3         0  2015-12-05 13:07    NaN   \n",
-       "4         7  2015-12-04 21:23    NaN   \n",
-       "5         7  2015-12-06 00:21    NaN   \n",
-       "6        21  2015-12-05 19:05    NaN   \n",
-       "7        23  2015-12-05 14:01    NaN   \n",
-       "8        88  2015-12-05 12:40    NaN   \n",
-       "9       169  2015-12-04 22:20    NaN   \n",
-       "\n",
-       "                                                tags  \\\n",
-       "0  [подписка, мобильные приложения, урбанизация, ...   \n",
-       "1              [bluetooth, iBeacon, bluetooth-маяки]   \n",
-       "2  [Россия, стартапы, китай, рейтинг, индия, мала...   \n",
-       "3  [Игры, книги, безбумажная библиотека, nintendo...   \n",
-       "4                                             [uber]   \n",
-       "5      [Breaking Mad, депутаты, драматичные новости]   \n",
-       "6    [музыка, безопасность, Википедия, знаменитости]   \n",
-       "7            [фото, Instagram, Новый год, Рождество]   \n",
-       "8  [СМИ, журналистика, медиа, Алексей Венедиктов,...   \n",
-       "9  [научные исследования, британские учёные, глуп...   \n",
-       "\n",
-       "                                               title  type  \\\n",
-       "0  Мнение: Приложения и интернет-сервисы убивают ...    VC   \n",
-       "1  iBeacon-маяки для бизнеса: кейсы от EasyJet, B...    VC   \n",
-       "2  Россия, Польша, Тунис и другие — топ-10 стран ...    VC   \n",
-       "3           «Консольные войны»: Sega против Nintendo    VC   \n",
-       "4  Украинское министерство инфраструктуры анонсир...    VC   \n",
-       "5  Драматичные новости недели от Breaking Mad: шт...  TJ_P   \n",
-       "6  Австралиец попал за кулисы к любимой группе, и...  TJ_P   \n",
-       "7  Праздник к нам приходит: ёлки в разных странах...  TJ_P   \n",
-       "8  Леся Рябцева объявила об уходе с «Эха Москвы» ...  TJ_P   \n",
-       "9  Глупость любителей «глубокомысленных» цитат по...  TJ_P   \n",
-       "\n",
-       "                                                 url  views  \n",
-       "0                  https://vc.ru/p/app-around-corner   6412  \n",
-       "1                  https://vc.ru/p/ibeacon-marketing   1644  \n",
-       "2           https://vc.ru/p/best-cities-for-startups   3950  \n",
-       "3                      https://vc.ru/p/sega-nintendo   1817  \n",
-       "4                       https://vc.ru/n/uber-ukraine   3367  \n",
-       "5      https://tjournal.ru/p/breaking-mad-cientotres   2233  \n",
-       "6               https://tjournal.ru/p/peking-duk-fan  17766  \n",
-       "7  https://tjournal.ru/p/christmas-trees-around-t...   5326  \n",
-       "8               https://tjournal.ru/p/lesya-echo-off  45124  \n",
-       "9                https://tjournal.ru/p/stupid-quotes  27746  "
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'news_info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-18671e7a8b5e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnews_info\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'news_info' is not defined"
+     ]
     }
    ],
    "source": [
