--- a/RSS.ipynb
+++ b/RSS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
        "('rss', {'version': '2.0'})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,8 @@
     "    \n",
     "    def __init__(self):\n",
     "        #self._pages = [\"https://roem.ru/rss/roem-all-news.xml\", \"http://lifenews.ru/xml/feed.xml\", \"http://www.forbes.ru/newrss.xml\", \"http://rg.ru/xml/index.xml\", \"http://www.vesti.ru/vesti.rss\", \"http://lenta.ru/rss\", \"http://ria.ru/export/rss2/index.xml\"]\n",
-    "        self._pages = [\"https://roem.ru/rss/roem-all-news.xml\", \"http://lifenews.ru/xml/feed.xml\", \"http://www.forbes.ru/newrss.xml\", \"http://www.vesti.ru/vesti.rss\", \"http://lenta.ru/rss\", \"http://ria.ru/export/rss2/index.xml\", \"https://navalny.com/blog/post.rss\", \"https://slon.ru/export/all.xml\", \"https://meduza.io/rss/all\", \"http://www.vedomosti.ru/rss/news\"]\n",
+    "        #self._pages = [\"https://roem.ru/rss/roem-all-news.xml\", \"http://lifenews.ru/xml/feed.xml\", \"http://www.forbes.ru/newrss.xml\", \"http://www.vesti.ru/vesti.rss\", \"http://lenta.ru/rss\", \"http://ria.ru/export/rss2/index.xml\", \"https://navalny.com/blog/post.rss\", \"https://slon.ru/export/all.xml\", \"https://meduza.io/rss/all\", \"http://www.vedomosti.ru/rss/news\"]\n",
+    "        self._pages = [\"https://navalny.com/blog/post.rss\"]\n",
     "        self._month_dict = {\"Jan\":\"1\", \"Feb\":\"2\", \"Mar\":\"3\", \"Apr\":\"4\", \"May\":\"5\", \"Jun\":\"6\", \"Jul\":\"7\", \"Aug\":\"8\", \"Sep\":\"9\", \"Oct\":\"10\", \"Nov\":\"11\", \"Dec\":\"12\"}\n",
     "        \n",
     "        self._UTC_TIME_ZONE = tz.gettz('Europe/London')\n",
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -168,17 +169,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://roem.ru/rss/roem-all-news.xml\n",
-      "http://lifenews.ru/xml/feed.xml\n",
-      "http://www.forbes.ru/newrss.xml\n",
-      "http://www.vesti.ru/vesti.rss\n",
-      "http://lenta.ru/rss\n",
-      "http://ria.ru/export/rss2/index.xml\n",
       "https://navalny.com/blog/post.rss\n",
-      "https://slon.ru/export/all.xml\n",
-      "https://meduza.io/rss/all\n",
-      "http://www.vedomosti.ru/rss/news\n",
-      "Собрано  577  новостей с RSS\n"
+      "Собрано  9  новостей с RSS\n"
      ]
     }
    ],
@@ -1047,12 +1039,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2015_12_10 03_45'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.now().strftime('%Y_%m_%d %H_%M')"
+   ]
   }
  ],
  "metadata": {
